[package]
name = "vf2-riscv-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = { version = "0.12.0", features = [
	"critical-section-single-hart"
] }
riscv-rt = "0.13.0"
#riscv-rt = { version = "0.13.0", features = [
#	"v-trap"
#] }
panic-halt = "0.2.0"
bitflags = "2.6.0"
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
embedded-io = "0.6.1"
heapless = "0.7.17"
jh7110-pac = {path = "../jh7110-pac/"}
nb = "1.1.0"
jh71xx-hal = "0.4.1"
critical-section = "1.1.3"
spin = "0.9.8"
